Add pdfbox configs